--- a/jsontransformers/pom.xml
+++ b/jsontransformers/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>serialize</groupId>
-	<artifactId>serialize</artifactId>
+	<groupId>jsontransformers</groupId>
+	<artifactId>jsontransformers</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -12,13 +12,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<build>
-		<finalName>stream</finalName>
-		<resources>
-			<resource>
-				<directory>resources_stream</directory>
-				<targetPath>resources_stream</targetPath>
-			</resource>
-		</resources>
+		<finalName>jsontransformers</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -141,6 +135,37 @@
 		    <artifactId>xml</artifactId>
 		    <version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+		    <groupId>xom</groupId>
+		    <artifactId>xom</artifactId>
+		    <version>1.2.5</version>
+		    <exclusions>
+		    	<exclusion>
+		    		<groupId>xml-apis</groupId>
+				    <artifactId>xml-apis</artifactId>
+				</exclusion>
+				<exclusion>
+		    		<groupId>xerces</groupId>
+				    <artifactId>xercesImpl</artifactId>
+				</exclusion>
+				<exclusion>
+		    		<groupId>xalan</groupId>
+				    <artifactId>xalan</artifactId>
+				</exclusion>
+		    </exclusions>
+		</dependency>
+		<!-- <dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20160212</version>
+		</dependency> -->
+		<!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
+		<dependency>
+	        <groupId>net.sf.json-lib</groupId>
+	        <artifactId>json-lib</artifactId>
+	        <version>2.4</version>
+	        <classifier>jdk15</classifier>
+	    </dependency>
 		<dependency>
 			<groupId>pl.pragmatists</groupId>
 			<artifactId>JUnitParams</artifactId>
