--- a/belote/pom.xml
+++ b/belote/pom.xml
@@ -147,8 +147,8 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>formathtml</groupId>
-			<artifactId>formathtml</artifactId>
+			<groupId>bean</groupId>
+			<artifactId>bean</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
