--- a/pokecardsproject/pom.xml
+++ b/pokecardsproject/pom.xml
@@ -7,50 +7,29 @@
 	<artifactId>pokecardspro</artifactId>
 	<version>2.0</version>
 	<packaging>pom</packaging>
-
+<properties>
+        <jdk.version>1.6</jdk.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 	<modules>
-		<module>../resources</module>
-		<module>../bean</module>
-		<module>../util</module>
-		<module>../xml</module>
-		<!-- <module>../utilhelpertest</module>
-		<module>../utiltest</module> -->
-		<module>../serialize</module>
-		<module>../datacheck</module>
-		<module>../stream</module>
-		<!-- <module>../streamhelpertest</module>
-		<module>../streamtest</module> -->
-		<module>../formatconst</module>
-		<module>../maths</module>
-		<!-- <module>../mathstest</module> -->
-		<module>../expressionlanguage</module>
-		<!-- <module>../expressionlanguagehelpertest</module>
-		<module>../expressionlanguagetest</module> -->
-		<module>../images</module>
-		<module>../formathtml</module>
-		<!-- <module>../formathtmlhelpertest</module>
-		<module>../formathtmltest</module> -->
-		<module>../pokemoncore</module>
-		<!-- <module>../pokemoncorehelpertest</module>
-		<module>../pokemoncoretest</module> -->
-		<module>../guicommon</module>
-		<module>../pokemonbean</module>
-		<module>../network</module>
-		<module>../pokemongui</module>
-		<module>../cardgamescommon</module>
-		<module>../cardsgameresults</module>
-		<module>../belote</module>
-		<!-- <module>../belotetest</module> -->
-		<module>../president</module>
-		<!-- <module>../presidenttest</module> -->
-		<module>../tarot</module>
-		<!-- <module>../tarottest</module> -->
-		<module>../cardgamesunion</module>
-		<module>../cardgamesgui</module>
+		<module>../coreproject</module>
+		<module>../pokemongroup</module>
+		<module>../cardsgroup</module>
 		<module>../pokecards</module>
 		<module>../pokecardsmain</module>
 	</modules>
- <build>
- </build>
- 
+	<build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                </configuration>
+            </plugin>
+            
+        </plugins>
+    </build>
 </project>
