--- a/pokemongui/pom.xml
+++ b/pokemongui/pom.xml
@@ -2,15 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+       <groupId>pokemongroup</groupId>
+        <artifactId>pokemongroup</artifactId>
+        <version>2.0</version>
+        <relativePath>../pokemongroup</relativePath>
+    </parent>
 	<groupId>pokemongui</groupId>
 	<artifactId>pokemongui</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<properties>
-		<jdk.version>1.6</jdk.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
 	<build>
 		<resources>
 			<resource>
@@ -19,15 +21,6 @@
 			</resource>
 		</resources>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>${jdk.version}</source>
-					<target>${jdk.version}</target>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
@@ -87,11 +80,6 @@
 		</pluginManagement>
 	</build>
 	<dependencies>
- 		<!-- <dependency>
-			<groupId>pokemoncore</groupId>
-			<artifactId>pokemoncore</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency> -->
 		<dependency>
 			<groupId>network</groupId>
 			<artifactId>network</artifactId>
@@ -102,12 +90,5 @@
 			<artifactId>pokemonbean</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>com.sun</groupId>
-			<artifactId>tools</artifactId>
-			<version>1.6</version>
-			<scope>system</scope>
-			<systemPath>${basedir}\lib\tools.jar</systemPath>
-		</dependency> -->
 	</dependencies>
 </project>
