--- a/stream/pom.xml
+++ b/stream/pom.xml
@@ -2,23 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+       <groupId>coreproject</groupId>
+        <artifactId>coreproject</artifactId>
+        <version>2.0</version>
+        <relativePath>../coreproject</relativePath>
+    </parent>
 	<groupId>stream</groupId>
 	<artifactId>stream</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<properties>
-		<jdk.version>1.6</jdk.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
 	<build>
 		<finalName>stream</finalName>
-		<resources>
-			<resource>
-				<directory>resources_stream</directory>
-				<targetPath>resources_stream</targetPath>
-			</resource>
-		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -49,15 +45,6 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.12</version>
-				<configuration>
-					<junitArtifactName>junit:junit</junitArtifactName>
-					<argLine>-Dfile.encoding=UTF-8</argLine>
-				</configuration>
 			</plugin>
 		</plugins>
 		<pluginManagement>
@@ -106,49 +93,6 @@
 			<groupId>serialize</groupId>
 			<artifactId>serialize</artifactId>
 			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-		    <groupId>xom</groupId>
-		    <artifactId>xom</artifactId>
-		    <version>1.2.5</version>
-		    <exclusions>
-		    	<exclusion>
-		    		<groupId>xml-apis</groupId>
-				    <artifactId>xml-apis</artifactId>
-				</exclusion>
-				<exclusion>
-		    		<groupId>xerces</groupId>
-				    <artifactId>xercesImpl</artifactId>
-				</exclusion>
-				<exclusion>
-		    		<groupId>xalan</groupId>
-				    <artifactId>xalan</artifactId>
-				</exclusion>
-		    </exclusions>
-		</dependency>
-		<!-- <dependency>
-		    <groupId>org.json</groupId>
-		    <artifactId>json</artifactId>
-		    <version>20160212</version>
-		</dependency> -->
-		<!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
-		<dependency>
-	        <groupId>net.sf.json-lib</groupId>
-	        <artifactId>json-lib</artifactId>
-	        <version>2.4</version>
-	        <classifier>jdk15</classifier>
-	    </dependency>
-		<dependency>
-			<groupId>pl.pragmatists</groupId>
-			<artifactId>JUnitParams</artifactId>
-			<version>1.0.2</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-		    <groupId>xmlunit</groupId>
-		    <artifactId>xmlunit</artifactId>
-		    <version>1.6</version>
-		    <scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
