--- a/formathtml/pom.xml
+++ b/formathtml/pom.xml
@@ -106,6 +106,11 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+            <groupId>stream</groupId>
+            <artifactId>stream</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+		<dependency>
 		    <groupId>xmlunit</groupId>
 		    <artifactId>xmlunit</artifactId>
 		    <version>1.6</version>
