--- a/cardgamesunion/pom.xml
+++ b/cardgamesunion/pom.xml
@@ -97,8 +97,8 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>datacheck</groupId>
-			<artifactId>datacheck</artifactId>
+			<groupId>stream</groupId>
+			<artifactId>stream</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
