--- a/guicommon/pom.xml
+++ b/guicommon/pom.xml
@@ -85,5 +85,10 @@
 			<artifactId>formathtml</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+        <dependency>
+            <groupId>stream</groupId>
+            <artifactId>stream</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 </project>
