--- a/pokemonmain/pom.xml
+++ b/pokemonmain/pom.xml
@@ -2,13 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+       <groupId>pokemon</groupId>
+        <artifactId>pokemon</artifactId>
+        <version>2.0</version>
+        <relativePath>../pokemonproject</relativePath>
+    </parent>
 	<groupId>pokemonmain</groupId>
 	<artifactId>pokemonmain</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
-		<jdk.version>1.6</jdk.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<build>
