--- a/pokemonproject/pom.xml
+++ b/pokemonproject/pom.xml
@@ -7,25 +7,27 @@
 	<artifactId>pokemon</artifactId>
 	<version>2.0</version>
 	<packaging>pom</packaging>
-
+    <properties>
+        <jdk.version>1.6</jdk.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 	<modules>
-		<module>../util</module>
-		<module>../utiltest</module>
-		<module>../stream</module>
-		<module>../streamtest</module>
-		<module>../formatconst</module>
-		<module>../maths</module>
-		<module>../mathstest</module>
-		<module>../expressionlanguage</module>
-		<module>../expressionlanguagetest</module>
-		<module>../formathtml</module>
-		<module>../formathtmltest</module>
-		<module>../pokemoncore</module>
-		<module>../pokemoncoretest</module>
-		<module>../guicommon</module>
-		<module>../pokemonbean</module>
-		<module>../network</module>
-		<module>../pokemongui</module>
-		<module>../pokemonmain</module>
+		<module>../coreproject</module>
+        <module>../pokemongroup</module>
+        <module>../pokemonmain</module>
 	</modules>
+	<build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                </configuration>
+            </plugin>
+            
+        </plugins>
+    </build>
 </project>
