improve error message while connecting to network
remove logs

refactoring code

--- a/cardgamesgui/resources_cards/gui/messages/en/cards/gui/mainwindow.properties
+++ b/cardgamesgui/resources_cards/gui/messages/en/cards/gui/mainwindow.properties
@@ -123,6 +123,7 @@ trickWinner=The winner of the trick is {0}.
 bonusWin={0} wins the bonus {1}.
 tooMany=Maximal number of connections achieved.
 bug=Bug
+unknownHost=Unknown host: {0}
 notConnected=Not connected
 notFoundFile=Unfound files
 notHelp=No available help
