--- a/cardgamesgui/resources_cards/gui/messages/fr/cards/gui/mainwindow.properties
+++ b/cardgamesgui/resources_cards/gui/messages/fr/cards/gui/mainwindow.properties
@@ -123,6 +123,7 @@ trickWinner=Le ramasseur est {0}.
 bonusWin={0} gagne la prime {1}.
 tooMany=Nombre maximal de connexions atteint.
 bug=Probl&eacute;me
+unknownHost=H&ocirc;te inconnu: {0}
 notConnected=Non connect&eacute;
 notFoundFile=Fichiers introuvables
 notHelp=Pas d'aide disponible
