--- a/pokemongui/resources_pk/gui/messages/en/aiki/gui/components/walk/scenepanel.properties
+++ b/pokemongui/resources_pk/gui/messages/en/aiki/gui/components/walk/scenepanel.properties
@@ -61,6 +61,7 @@ titleDifficulty=Difficulty
 titleComments=Happened events
 clickScene=Click the scene at the left of the menus in order to use key pad.
 bug=Bug
+unknownHost=Unknown host: {0}
 notConnected=Not connected
 errorUsingItem=Error while using the item {0}.
 noPossibleLearn=No pokemon in your team can learn the move {0}.
