--- a/pokemongui/resources_pk/gui/messages/fr/aiki/gui/components/walk/scenepanel.properties
+++ b/pokemongui/resources_pk/gui/messages/fr/aiki/gui/components/walk/scenepanel.properties
@@ -61,6 +61,7 @@ titleDifficulty=Difficult&eacute;
 titleComments=&Eacute;v&eacute;nements ayant eu lieu
 clickScene=Cliquez sur la sc&egrave;ne &agrave; gauche des menus pour utiliser le clavier.
 bug=Probl&eacute;me
+unknownHost=H&ocirc;te inconnu: {0}
 notConnected=Non connect&eacute;
 errorUsingItem=Erreur d''utilisation de l''objet {0}.
 noPossibleLearn=Aucun pokemon dans votre &eacute;quipe ne peut apprendre l''attaque {0}.
