--- a/pokemongui/resources_pk/gui/messages/en/aiki/gui/mainwindow.properties
+++ b/pokemongui/resources_pk/gui/messages/en/aiki/gui/mainwindow.properties
@@ -14,6 +14,7 @@ params=Parameters
 tooMany=Maximal number of connections achieved.
 noTrade=No pokemon is tradable.
 bug=Bug
+unknownHost=Unknown host: {0}
 notConnected=Not connected
 errorLoading=Error while loading the file.
 successfulLoading=Successful loading the ZIP archive.
