--- a/pokemongui/resources_pk/gui/messages/fr/aiki/gui/mainwindow.properties
+++ b/pokemongui/resources_pk/gui/messages/fr/aiki/gui/mainwindow.properties
@@ -14,6 +14,7 @@ params=Param&egrave;tres
 tooMany=Nombre maximal de connexions atteint.
 noTrade=Aucun pokemon n'est &eacute;changeable.
 bug=Probl&eacute;me
+unknownHost=H&ocirc;te inconnu: {0}
 notConnected=Non connect&eacute;
 errorLoading=Erreur de chargement du fichier.
 successfulLoading=Chargement r&eacute;ussi de l'archive ZIP.
