remove useless comments

--- a/pokemonbean/resources_pk/rom/web/messages/en/round/round.properties
+++ b/pokemonbean/resources_pk/rom/web/messages/en/round/round.properties
@@ -112,7 +112,7 @@ round_process_move_final_9=The success of the current effect against the current
 round_process_move_final_10=An effect is noticed successful against a target if and only if the effect achieves the target.<br/>
 round_process_move_final_succ_1=The target is not protected against the move by an ability, an item or a weather.
 round_process_move_final_succ_2=The target has not used and successed a move such as:<br/>
-round_process_move_final_succ_3=The value resulting from litteral calculation of the case of fail is false (ex: ).<br/>
+round_process_move_final_succ_3=The value resulting from litteral calculation of the case of fail is false.<br/>
 round_process_move_final_succ_3_ex=(ex: {0} for the primary effect of the move {1})
 round_process_move_final_10_1=<a c:command="web/html/round/helpround.html#addonformula4">See determination of the success of the effect without accuracy, efficiency and effect against a partner by a status</a>.
 round_process_move_final_11=In certain cases of fail of the effect (without accuracy, efficiency and healing a partner by a status), the ability of the target is enabled:<br/>
