--- a/pokemonbean/resources_pk/rom/web/messages/fr/round/round.properties
+++ b/pokemonbean/resources_pk/rom/web/messages/fr/round/round.properties
@@ -112,7 +112,7 @@ round_process_move_final_9=On applique la r&eacute;ussite de l''effet courant su
 round_process_move_final_10=Un effet est dit r&eacute;ussi sur une cible si et seulement si l''effet touche la cible.<br/>
 round_process_move_final_succ_1=La cible n''est pas prot&eacute;g&eacute;e de l''attaque par une capacit&eacute;, un objet ou un climat.
 round_process_move_final_succ_2=La cible n''a pas lanc&eacute; et r&eacute;ussi une attaque telle que:<br/>
-round_process_move_final_succ_3=La valeur r&eacute;sultante du calcul litt&eacute;ral du cas d''&eacute;chec est fausse (ex: ).<br/>
+round_process_move_final_succ_3=La valeur r&eacute;sultante du calcul litt&eacute;ral du cas d''&eacute;chec est fausse.<br/>
 round_process_move_final_succ_3_ex=(ex: {0} pour l''effet primaire de l''attaque {1})
 round_process_move_final_10_1=<a c:command="web/html/round/helpround.html#addonformula4">Voir d&eacute;termination de la r&eacute;ussite de l''effet en dehors de la pr&eacute;cision, de l''efficacit&eacute; et de l''effet sur un partenaire via un statut</a>.
 round_process_move_final_11=Dans certains cas d''&eacute;chec de l''effet (hors pr&eacute;cision, efficacit&eacute; et soin du partenaire via un statut), la capacit&eacute; de la cible est activ&eacute;e:<br/>
