--- a/guicommon/pom.xml
+++ b/guicommon/pom.xml
@@ -85,6 +85,11 @@
 			<artifactId>formathtml</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+            <groupId>imagesurl</groupId>
+            <artifactId>imagesurl</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>stream</groupId>
             <artifactId>stream</artifactId>
