add matching spaces as meta characters

--- a/pokemongui/resources_pk/gui/messages/en/util/pagination/searchingmode.properties
+++ b/pokemongui/resources_pk/gui/messages/en/util/pagination/searchingmode.properties
@@ -1,4 +1,6 @@
 WHOLE_STRING=Whole string
 META_CHARACTER=Wild cards
-REG_EXP=Regular expressions
+BEGIN=Begin of string
+END=End of string
+MATCH_SPACE=Spaced wild cards
 SUBSTRING=Sub string
