--- a/pokemongui/resources_pk/gui/messages/fr/util/pagination/searchingmode.properties
+++ b/pokemongui/resources_pk/gui/messages/fr/util/pagination/searchingmode.properties
@@ -1,4 +1,6 @@
 WHOLE_STRING=Cha&icirc;ne enti&egrave;re
 META_CHARACTER=Caract&egrave;res de remplacement
-REG_EXP=Expressions r&eacute;guli&egrave;res
+BEGIN=D&eacute;but de cha&icirc;ne
+END=Fin de cha&icirc;ne
+MATCH_SPACE=Espaces de remplacement
 SUBSTRING=Sous cha&icirc;ne
