--- a/belote/pom.xml
+++ b/belote/pom.xml
@@ -111,5 +111,10 @@
 			<artifactId>bean</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+            <groupId>formathtml</groupId>
+            <artifactId>formathtml</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 </project>
