improve detecting errors about numbers end
about getting function calls, array index

remove bad characters

remove useless files

--- a/belote/resources_cards/classes/fr/cards/belote/resultsbelote.properties
+++ b/belote/resources_cards/classes/fr/cards/belote/resultsbelote.properties
@@ -1,2 +1,2 @@
-resultsPage=Résultats globaux
-detailResultsPage=Détail des résultats
+resultsPage=R&eacute;sultats globaux
+detailResultsPage=D&eacute;tail des r&eacute;sultats
