--- a/president/resources_cards/classes/fr/cards/president/resultspresident.properties
+++ b/president/resources_cards/classes/fr/cards/president/resultspresident.properties
@@ -1,2 +1,2 @@
-resultsPage=Résultats globaux
-detailResultsPage=Détail des résultats
+resultsPage=R&eacute;sultats globaux
+detailResultsPage=D&eacute;tail des r&eacute;sultats
