prepare to remove reflection

--- a/pokemonbean/resources_pk/rom/web/messages/en/endround/individual.properties
+++ b/pokemonbean/resources_pk/rom/web/messages/en/endround/individual.properties
@@ -34,4 +34,4 @@ heal_hp_by_owner_types_key=Owned types
 heal_hp_by_owner_types_value=Variation of the rate of the hp of the fighter
 heal_hp_by_owner_types_value_w=Win of {0} of the full hp
 heal_hp_by_owner_types_value_l=Loss of {0} of the full hp
-user_status=The fighter is affected by the status <a c:command="$clickStatus({1})">{0}</a> if not already done.<br/>
+user_status=The fighter is affected by the status <a c:command="$clickUserStatus({1})">{0}</a> if not already done.<br/>
