--- a/pokemonbean/resources_pk/rom/web/messages/fr/endround/individual.properties
+++ b/pokemonbean/resources_pk/rom/web/messages/fr/endround/individual.properties
@@ -34,4 +34,4 @@ heal_hp_by_owner_types_key=Types poss&eacute;d&eacute;s
 heal_hp_by_owner_types_value=Variation du taux de pv du combattant
 heal_hp_by_owner_types_value_w=Gain de {0} du total des pv
 heal_hp_by_owner_types_value_l=Perte de {0} du total des pv
-user_status=Le combattant prend le statut <a c:command="$clickStatus({1})">{0}</a> si ce n''est pas d&eacute;j&agrave; fait.<br/>
+user_status=Le combattant prend le statut <a c:command="$clickUserStatus({1})">{0}</a> si ce n''est pas d&eacute;j&agrave; fait.<br/>
