--- a/explangadv/pom.xml
+++ b/explangadv/pom.xml
@@ -95,5 +95,10 @@
 			<artifactId>expressionlanguage</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+            <groupId>serialize</groupId>
+            <artifactId>serialize</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 </project>
