--- a/expressionlanguage/pom.xml
+++ b/expressionlanguage/pom.xml
@@ -91,9 +91,9 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>serialize</groupId>
-			<artifactId>serialize</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
+            <groupId>sml</groupId>
+            <artifactId>sml</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 </project>
