--- a/musiccore/pom.xml
+++ b/musiccore/pom.xml
@@ -75,8 +75,8 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>serialize</groupId>
-			<artifactId>serialize</artifactId>
+			<groupId>sml</groupId>
+			<artifactId>sml</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
