--- a/coreproject/pom.xml
+++ b/coreproject/pom.xml
@@ -67,9 +67,9 @@
 	</build>
 	<dependencies>
          <dependency>
-             <groupId>pl.pragmatists</groupId>
-             <artifactId>JUnitParams</artifactId>
-             <version>1.0.2</version>
+             <groupId>junit</groupId>
+             <artifactId>junit</artifactId>
+             <version>4.11</version>
              <scope>test</scope>
          </dependency>
      </dependencies>
