--- a/guicommon/pom.xml
+++ b/guicommon/pom.xml
@@ -86,8 +86,8 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-            <groupId>imagesurl</groupId>
-            <artifactId>imagesurl</artifactId>
+            <groupId>images</groupId>
+            <artifactId>images</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
