--- a/expressionlanguage/pom.xml
+++ b/expressionlanguage/pom.xml
@@ -91,8 +91,8 @@
 	</build>
 	<dependencies>
 		<dependency>
-            <groupId>sml</groupId>
-            <artifactId>sml</artifactId>
+            <groupId>util</groupId>
+            <artifactId>util</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 	</dependencies>
