--- a/formathtml/pom.xml
+++ b/formathtml/pom.xml
@@ -96,6 +96,11 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+            <groupId>sml</groupId>
+            <artifactId>sml</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+		<dependency>
 			<groupId>expressionlanguage</groupId>
 			<artifactId>expressionlanguage</artifactId>
 			<version>1.0-SNAPSHOT</version>
