--- a/pokemongroup/pom.xml
+++ b/pokemongroup/pom.xml
@@ -19,9 +19,9 @@
 	</modules>
     <dependencies>
          <dependency>
-             <groupId>pl.pragmatists</groupId>
-             <artifactId>JUnitParams</artifactId>
-             <version>1.0.2</version>
+             <groupId>junit</groupId>
+             <artifactId>junit</artifactId>
+             <version>4.11</version>
              <scope>test</scope>
          </dependency>
      </dependencies>
