--- a/player/pom.xml
+++ b/player/pom.xml
@@ -42,7 +42,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- <plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>2.11</version>
@@ -55,35 +55,13 @@
 							<encoding>UTF-8</encoding>
 							<consoleOutput>true</consoleOutput>
 							<failsOnError>true</failsOnError>
-							<linkXRef>false</linkXRef>
 						</configuration>
 						<goals>
 							<goal>check</goal>
 						</goals>
 					</execution>
 				</executions>
-			</plugin> -->
-			<!-- <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.8</version>
-				<executions>
-					<execution>
-						<id>unpack-dependencies</id>
-						<phase>package</phase>
-						<goals>
-							<goal>unpack-dependencies</goal>
-						</goals>
-						<configuration>
-							<includes>**/*.properties,**/*.txt,**/*.html,**/*.xml,**/*.css</includes>
-							<excludes>**/*.class</excludes>
-							<outputDirectory>${basedir}/test</outputDirectory>
-							<overWriteReleases>false</overWriteReleases>
-							<overWriteSnapshots>true</overWriteSnapshots>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin> -->
+			</plugin>
 			<plugin>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.2</version>
@@ -119,8 +97,6 @@
 							</classPath>
 							<icon>resources_player/player.ico</icon>
 							<jre>
-								<!-- <minVersion>1.7.0</minVersion>
-								<jdkPreference>preferJre</jdkPreference> -->
 								<path>jre</path>
 								<opts>
 									<opt>-Dfile.encoding=utf-8</opt>
