--- a/pokecardsproject/pom.xml
+++ b/pokecardsproject/pom.xml
@@ -9,6 +9,7 @@
 	<packaging>pom</packaging>
 <properties>
         <jdk.version>1.6</jdk.version>
+        <jacoco.version>0.6.5.201403032054</jacoco.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 	<modules>
@@ -41,7 +42,7 @@
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.6.5.201403032054</version>
+                    <version>${jacoco.version}</version>
                     <configuration>
                         <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
                         <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
