--- a/pokemongroup/pom.xml
+++ b/pokemongroup/pom.xml
@@ -5,7 +5,7 @@
        <groupId>pokecardspro</groupId>
         <artifactId>pokecardspro</artifactId>
         <version>2.0</version>
-        <relativePath>../pokecardspro</relativePath>
+        <relativePath>../pokecardsproject</relativePath>
     </parent>
 	<modelVersion>4.0.0</modelVersion>
 
