--- a/president/pom.xml
+++ b/president/pom.xml
@@ -66,8 +66,8 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>cardgamesresults</groupId>
-			<artifactId>cardgamesresults</artifactId>
+			<groupId>cardsgameresults</groupId>
+			<artifactId>cardsgameresults</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
