--- a/cardgamessml/pom.xml
+++ b/cardgamessml/pom.xml
@@ -45,9 +45,9 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 		<dependency>
-            <groupId>sml</groupId>
-            <artifactId>sml</artifactId>
-            <version>1.0-SNAPSHOT</version>
+			<groupId>cardgamescommon</groupId>
+			<artifactId>cardgamescommon</artifactId>
+			<version>1.0-SNAPSHOT</version>
         </dependency>
 	</dependencies>
 </project>
