--- a/cardgamessml/pom.xml
+++ b/cardgamessml/pom.xml
@@ -45,9 +45,29 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 		<dependency>
-			<groupId>cardgamescommon</groupId>
-			<artifactId>cardgamescommon</artifactId>
+			<groupId>formatconst</groupId>
+			<artifactId>formatconst</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>cardsgameresults</groupId>
+			<artifactId>cardsgameresults</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>belote</groupId>
+			<artifactId>belote</artifactId>
 			<version>1.0-SNAPSHOT</version>
         </dependency>
+		<dependency>
+			<groupId>president</groupId>
+			<artifactId>president</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>tarot</groupId>
+			<artifactId>tarot</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
