prepare move classes

--- a/cardsgroup/pom.xml
+++ b/cardsgroup/pom.xml
@@ -18,6 +18,7 @@
         <module>../belote</module>
         <module>../president</module>
         <module>../tarot</module>
+        <module>../cardgamessml</module>
         <module>../cardgamesunion</module>
         <module>../belotebean</module>
         <module>../presidentbean</module>
