--- a/cardgamessml/pom.xml
+++ b/cardgamessml/pom.xml
@@ -8,8 +8,8 @@
         <version>2.0</version>
         <relativePath>../cardsgroup</relativePath>
     </parent>
-	<groupId>mathssml</groupId>
-	<artifactId>mathssml</artifactId>
+	<groupId>cardgamessml</groupId>
+	<artifactId>cardgamessml</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
