--- a/cardgamesunion/pom.xml
+++ b/cardgamesunion/pom.xml
@@ -61,6 +61,11 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>cardgamessml</groupId>
+			<artifactId>cardgamessml</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>stream</groupId>
 			<artifactId>stream</artifactId>
 			<version>1.0-SNAPSHOT</version>
