--- a/coreproject/pom.xml
+++ b/coreproject/pom.xml
@@ -21,6 +21,7 @@
 		<module>../musiccore</module>
 		<module>../formatconst</module>
 		<module>../maths</module>
+		<module>../mathssml</module>
 		<module>../expressionlanguage</module>
 		<module>../images</module>
 		<module>../formathtml</module>
