--- a/guicommon/pom.xml
+++ b/guicommon/pom.xml
@@ -60,5 +60,10 @@
             <artifactId>stream</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+		<dependency>
+			<groupId>mathssml</groupId>
+			<artifactId>mathssml</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
