--- a/pokemongroup/pom.xml
+++ b/pokemongroup/pom.xml
@@ -14,6 +14,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>../pokemoncore</module>
+        <module>../pokemonsml</module>
         <module>../pokemonbean</module>
         <module>../pokemongui</module>
 	</modules>
