--- a/pokemongui/pom.xml
+++ b/pokemongui/pom.xml
@@ -55,5 +55,10 @@
 			<artifactId>pokemonbean</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>pokemonsml</groupId>
+			<artifactId>pokemonsml</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
