--- a/player/pom.xml
+++ b/player/pom.xml
@@ -124,5 +124,10 @@
          <artifactId>maths</artifactId>
          <version>1.0-SNAPSHOT</version>
         </dependency>
+		<dependency>
+			<groupId>mathssml</groupId>
+			<artifactId>mathssml</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
