--- a/cardgamescommon/pom.xml
+++ b/cardgamescommon/pom.xml
@@ -44,10 +44,10 @@
 		</plugins>
 	</build>
 	<dependencies>
-		<dependency>
-			<groupId>sml</groupId>
-			<artifactId>sml</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
+        <dependency>
+            <groupId>maths</groupId>
+            <artifactId>maths</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 </project>
