--- a/pokecardsproject/pom.xml
+++ b/pokecardsproject/pom.xml
@@ -11,6 +11,7 @@
         <jdk.version>1.6</jdk.version>
         <jacoco.version>0.6.5.201403032054</jacoco.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<sonar.jacoco.reportPath>${basedir}/target/coverage-reports/jacoco-unit.exec</sonar.jacoco.reportPath>
     </properties>
 	<modules>
 		<module>../coreproject</module>
@@ -44,8 +45,8 @@
                     <artifactId>jacoco-maven-plugin</artifactId>
                     <version>${jacoco.version}</version>
                     <configuration>
-                        <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
-                        <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
+                        <destFile>${sonar.jacoco.reportPath}</destFile>
+                        <dataFile>${sonar.jacoco.reportPath}</dataFile>
                     </configuration>
                     <executions>
                         <execution>
