--- a/pokecardsproject/pom.xml
+++ b/pokecardsproject/pom.xml
@@ -12,6 +12,7 @@
         <jacoco.version>0.6.5.201403032054</jacoco.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<sonar.jacoco.reportPath>${basedir}/target/coverage-reports/jacoco-unit.exec</sonar.jacoco.reportPath>
+		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
     </properties>
 	<modules>
 		<module>../coreproject</module>
