add gui components to interpreter

--- a/coreproject/pom.xml
+++ b/coreproject/pom.xml
@@ -27,5 +27,6 @@
 		<module>../guicommon</module>
 		<module>../network</module>
 		<module>../musiccore</module>
+		<module>../expressionlanguagegui</module>
 	</modules>
 </project>
