--- a/coreproject/pom.xml
+++ b/coreproject/pom.xml
@@ -27,6 +27,7 @@
 		<module>../guicommon</module>
 		<module>../network</module>
 		<module>../musiccore</module>
+		<module>../expressionlanguageunit</module>
 		<module>../expressionlanguagegui</module>
 	</modules>
 </project>
