add sites render

--- a/coreproject/pom.xml
+++ b/coreproject/pom.xml
@@ -29,5 +29,6 @@
 		<module>../musiccore</module>
 		<module>../expressionlanguageunit</module>
 		<module>../expressionlanguagegui</module>
+		<module>../rendersgui</module>
 	</modules>
 </project>
