--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -57,5 +57,10 @@
 			<artifactId>rendersgui</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>rtsdemo</groupId>
+			<artifactId>rtsdemo</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
