--- a/applications/pom.xml
+++ b/applications/pom.xml
@@ -18,17 +18,6 @@
 	</properties>
 	<build>
 		<finalName>Applications</finalName>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>${jdk.version}</source>
-					<target>${jdk.version}</target>
-				</configuration>
-			</plugin>
-		</plugins>
 
 	</build>
 	<dependencies>
@@ -40,6 +29,11 @@
 		<dependency>
 			<groupId>pokemongui</groupId>
 			<artifactId>pokemongui</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>player</groupId>
+			<artifactId>player</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
