add parsing aliases and keywords

--- a/expressionlanguageutil/pom.xml
+++ b/expressionlanguageutil/pom.xml
@@ -28,10 +28,14 @@
             <artifactId>expressionlanguage</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!-- For enabling writing custom named files and predefined log file names -->
         <dependency>
             <groupId>stream</groupId>
             <artifactId>stream</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>mathssml</groupId>
+            <artifactId>mathssml</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 	</dependencies>
