improve alias checks

--- a/expressionlanguagegui/resources_lg_gui/aliases/en/typesgui.properties
+++ b/expressionlanguagegui/resources_lg_gui/aliases/en/typesgui.properties
@@ -154,7 +154,7 @@ ImageDispose=dispose
 GetParentCompo=getParent
 ImageDrawRect=drawRect
 TabbedPaneAdd=add
-PanelFlow=flow
+PanelFlow=horizon
 TabbedPaneRemove=remove
 TabbedPaneIndex=index
 PanelPageBox=page
