--- a/expressionlanguagegui/resources_lg_gui/aliases/fr/typesgui.properties
+++ b/expressionlanguagegui/resources_lg_gui/aliases/fr/typesgui.properties
@@ -134,7 +134,7 @@ ImageDrawOval=dessinerOval
 ColorGreen=v
 ColorBlue=b
 ImageDrawRect=dessinerRect
-PanelFlow=ligne
+PanelFlow=horizon
 ImageDraw=dessiner
 GetParentCompo=valParent
 ColorAlpha=a
