improve alias checks

--- a/expressionlanguagegui/resources_lg_gui/aliases/fr/typesgui.properties
+++ b/expressionlanguagegui/resources_lg_gui/aliases/fr/typesgui.properties
@@ -193,11 +193,11 @@ CompGetFirstPos=x
 CompGetSecondPos=y
 KeyEventCode=codeTouche
 WindowOpened=ouverte
-KeyReleased=relache
+KeyReleased=touRelache
 KeyEventChar=carTouche
 MouseEventIsMiddle=estMilieu
 RequestFocus=demanderFocus
-KeyPressed=presse
+KeyPressed=touPresse
 WheelMove=moletteDepl
 KeyEventIsShift=estMaj
 CompBorRaise=haut
