add file features, add number suffixes

--- a/expressionlanguageutil/resources_lg/aliases/en/keywords.properties
+++ b/expressionlanguageutil/resources_lg/aliases/en/keywords.properties
@@ -64,3 +64,17 @@ This=this
 Annotation=annotation
 Private=private
 ToString=$toString
+NbSufDoublePrim=d
+NbSufDouble=D
+NbSufFloatPrim=f
+NbSufFloat=F
+NbSufLongPrim=l
+NbSufLong=L
+NbSufIntegerPrim=i
+NbSufInteger=I
+NbSufCharacterPrim=c
+NbSufCharacter=C
+NbSufShortPrim=s
+NbSufShort=S
+NbSufBytePrim=b
+NbSufByte=B
