--- a/expressionlanguageutil/resources_lg/aliases/en/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/en/types.properties
@@ -388,6 +388,14 @@ CustPair=$core.PairImpl
 GetTa=get
 InfoTest=$core.InfoTest
 Assert=$core.Assert
+FileZippedBin=zippedBinary
+FileZippedText=zippedText
+FileZipBin=zipBinary
+FileZipText=zipText
+EntryBinary=$core.BinaryEntry
+EntryText=$core.TextEntry
+EntryName=name
+EntryValue=value
 DefaultPkg=$core
 FalseString=false
 TrueString=true
