--- a/expressionlanguageutil/resources_lg/aliases/fr/keywords.properties
+++ b/expressionlanguageutil/resources_lg/aliases/fr/keywords.properties
@@ -64,3 +64,17 @@ Superaccess=superacces
 NbExpDec=e
 Thisaccess=cetacces
 Classchoice=choixclasse
+NbSufDoublePrim=d
+NbSufDouble=D
+NbSufFloatPrim=f
+NbSufFloat=F
+NbSufLongPrim=o8
+NbSufLong=O8
+NbSufIntegerPrim=o4
+NbSufInteger=O4
+NbSufCharacterPrim=c
+NbSufCharacter=C
+NbSufShortPrim=o2
+NbSufShort=O2
+NbSufBytePrim=o
+NbSufByte=O
