--- a/expressionlanguageutil/resources_lg/aliases/fr/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/fr/types.properties
@@ -388,6 +388,14 @@ RemoveTa=supprimer
 SizeTa=taille
 Execute=$coeur.Executer
 GetTa=val
+FileZippedBin=archiveBin
+FileZippedText=archiveTexte
+FileZipBin=archBin
+FileZipText=archTexte
+EntryBinary=$coeur.EltArchBinaire
+EntryText=$coeur.EltArchTexte
+EntryName=nom
+EntryValue=valeur
 DefaultPkg=$coeur
 FalseString=faux
 TrueString=vrai
