add file features

--- a/expressionlanguageutil/resources_lg/aliases/en/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/en/types.properties
@@ -396,6 +396,9 @@ EntryBinary=$core.BinaryEntry
 EntryText=$core.TextEntry
 EntryName=name
 EntryValue=value
+FileIsAbsolute=isAbsolute
+FileReadBin=readBin
+FileWriteBin=writeBin
 DefaultPkg=$core
 FalseString=false
 TrueString=true
