--- a/expressionlanguageutil/resources_lg/aliases/fr/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/fr/types.properties
@@ -396,6 +396,9 @@ EntryBinary=$coeur.EltArchBinaire
 EntryText=$coeur.EltArchTexte
 EntryName=nom
 EntryValue=valeur
+FileIsAbsolute=estAbsolu
+FileReadBin=lireBin
+FileWriteBin=ecrireBin
 DefaultPkg=$coeur
 FalseString=faux
 TrueString=vrai
