add thread set, add window set, add mini app launcher

--- a/expressionlanguagegui/resources_lg_gui/aliases/en/typesgui.properties
+++ b/expressionlanguagegui/resources_lg_gui/aliases/en/typesgui.properties
@@ -376,6 +376,12 @@ ImageSet=set
 AddCompo=add
 SetFont=setFont
 Pack=pack
+WindowSet=$core.WindowSet
+WindowSetAll=all
+WindowSetAdd=add
+WindowSetContains=contains
+WindowSetRemove=remove
+WindowSetSnapshot=snapshot
 MenuNb=nb
 MenuItem=$core.MenuItem
 AbsMenu=$core.AbsMenu
