--- a/expressionlanguagegui/resources_lg_gui/aliases/fr/typesgui.properties
+++ b/expressionlanguagegui/resources_lg_gui/aliases/fr/typesgui.properties
@@ -368,6 +368,12 @@ Spinner=$coeur.CurseurNum
 Color=$coeur.Couleur
 Image=$coeur.Image
 Pack=cadrer
+WindowSet=$core.EnsAbsFenetre
+WindowSetAll=tous
+WindowSetAdd=ajout
+WindowSetContains=contient
+WindowSetRemove=suppr
+WindowSetSnapshot=tab
 Input=$coeur.Saisie
 GrList=$coeur.GrListe
 Dispose=liberer
