--- a/expressionlanguageutil/resources_lg/aliases/en/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/en/types.properties
@@ -339,6 +339,12 @@ Yield=yield
 Lock=lock
 Unlock=unlock
 Thread=$core.Thread
+ThreadSet=$core.ThreadSet
+ThreadSetAll=all
+ThreadSetAdd=add
+ThreadSetContains=contains
+ThreadSetRemove=remove
+ThreadSetSnapshot=snapshot
 Start=start
 ExecuteConvert=convert
 AssertAssert=assert
