--- a/expressionlanguageutil/resources_lg/aliases/fr/types.properties
+++ b/expressionlanguageutil/resources_lg/aliases/fr/types.properties
@@ -351,6 +351,12 @@ ResultFailMessage=messageErreur
 Runnable=$coeur.Executable
 Start=demarrer
 Thread=$coeur.Tache
+ThreadSet=$coeur.EnsTache
+ThreadSetAll=tous
+ThreadSetAdd=ajout
+ThreadSetContains=contient
+ThreadSetRemove=suppr
+ThreadSetSnapshot=tab
 Run=executer
 Yield=declencher
 Lock=verrouiller
